--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>RPZ Timeline</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
